--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <!--这里写上main方法所在类的路径-->
                 <configuration>
-                    <mainClass>zhny.AppStart</mainClass>
+                    <mainClass>changdao.AppStart</mainClass>
                 </configuration>
                 <executions>
                     <execution>
